--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -91,10 +91,8 @@ body,
 
   button {
     border: none;
-    background-color: black;
+    background-color: #011c36;
     color: white;
-    padding: 3px 8px;
-    margin-top: 16px;
   }
 }
 
@@ -120,5 +118,27 @@ body,
     padding: 2%;
     width: 50%;
     margin: 0 auto;
+  }
+}
+
+// --- EDIT COLOR FORM :-moz-ui-invalid
+.edit-color-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+
+  input {
+    max-width: 50%;
+    margin: 0 auto;
+    padding: 1.9%;
+    border-radius: 25px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+
+  button {
+    padding: 5%;
+    border-radius: 20px;
+    cursor: pointer;
   }
 }
