--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -142,3 +142,22 @@ body,
     cursor: pointer;
   }
 }
+
+// --- ADD COLOR FORM ---
+
+.add-color-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 50%;
+  margin: 0 auto;
+}
+
+.add-color-btn {
+  margin-top: 5%;
+  border: none;
+  background-color: #011c36;
+  color: white;
+  padding: 5%;
+  border-radius: 20px;
+  cursor: pointer;
+}
